<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".fragments.MovieDetailsFragment">

        <com.google.android.material.imageview.ShapeableImageView
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize5Percent"
            android:id="@+id/movieImage"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/preview_str"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/movieRate"
            app:layout_constraintStart_toEndOf="@+id/movieImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movieRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/movieRateDesc"
            app:layout_constraintTop_toTopOf="@+id/movieTitle" />

        <TextView
            android:id="@+id/movieRateDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out_of_10"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/movieRate"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/wishlistButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/grey"
            app:layout_constraintStart_toEndOf="@+id/movieImage"
            app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

        <Button
            android:id="@+id/watchTrailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch_trailer"
            android:textSize="14sp"
            android:textColor="@color/black"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/black"
            android:layout_margin="10dp"
            app:layout_constraintStart_toEndOf="@+id/movieImage"
            app:layout_constraintTop_toBottomOf="@+id/wishlistButton" />

        <View
            android:id="@+id/lineAfterMainInfo"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieImage"/>

        <TextView
            android:id="@+id/movieDescTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/short_description"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineAfterMainInfo" />

        <TextView
            android:id="@+id/movieDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieDescTitle" />

        <View
            android:id="@+id/lineAfterDescription"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieDesc"/>

        <TextView
            android:id="@+id/detailsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineAfterDescription" />

        <TextView
            android:id="@+id/genreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/genre"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/releasedDateTitle"
            app:layout_constraintTop_toBottomOf="@+id/detailsTitle" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/genreTitle"
            app:layout_constraintTop_toTopOf="@+id/genreTitle" />

        <TextView
            android:id="@+id/releasedDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/released_date"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genreTitle" />

        <TextView
            android:id="@+id/releasedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/releasedDateTitle"
            app:layout_constraintTop_toTopOf="@+id/releasedDateTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

